# eventflux

./: Cargo.toml  DEV_GUIDE.md  Dockerfile  FORK_MAINTENANCE.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: docker-publish.yml
benches/: lock_contention_bench.rs
docs/: writing_extensions.md
examples/demo/: docker-compose.yml
feat/async_streams/: ASYNC_STREAMS.md
feat/distributed/: DISTRIBUTED.md  TRANSPORT_LAYERS.md
feat/grammar/: GRAMMAR.md  README.md
feat/observability/: OBSERVABILITY.md
feat/rabbitmq/: README.md
feat/state_management/: REDIS_BACKEND.md
feat/type_system/: TYPE_SYSTEM.md
src/core/: data_source.rs  eventflux_app_runtime_builder.rs  eventflux_manager.rs  mod.rs
src/core/config/: element_config_resolver.rs  eventflux_context.rs  override_utils.rs  stream_config.rs  toml_config.rs
src/core/distributed/: coordinator.rs  distributed_runtime.rs  message_broker.rs  mod.rs  processing_engine.rs  runtime_mode.rs  state_backend.rs  transport.rs
src/core/error/: integration.rs  mod.rs  strategy.rs
src/core/event/: complex_event.rs  event.rs  value.rs
src/core/executor/: constant_expression_executor.rs  (+2 more)
src/query_api/: eventflux_app.rs
src/sql_compiler/: converter.rs  mod.rs  normalization.rs
studio/: package.json
tests/: advanced_window_tests.rs  aggregator_window.rs  alias_comprehensive_tests.rs  app_runner_aggregations.rs  app_runner_async_junction.rs  app_runner_async_pool_stress.rs  app_runner_case_expression.rs  app_runner_event_ser.rs  app_runner_functions.rs  app_runner_joins.rs  app_runner_output_rate.rs  app_runner_partition_stress.rs  app_runner_partitions.rs  app_runner_patterns.rs  app_runner_persistence.rs  app_runner_selector.rs  app_runner_stress.rs  app_runner_tables.rs  app_runner_triggers.rs  app_runner_windows.rs  async_annotation_tests.rs  builtin_function_parsing.rs  cache_table.rs  collection_aggregation_integration.rs  collection_aggregation_registry.rs  compare_expression.rs  data_source_init.rs  distributed_grpc_integration.rs  distributed_redis_state.rs  distributed_tcp_integration.rs  dynamic_ext_integration.rs  error_handling_integration_tests.rs  error_routing.rs  event_chain_clone.rs  expression_parser_complex.rs  extensions.rs  file_persistence.rs  function_executors.rs  in_expression_executor.rs  in_memory_table.rs  (+46 more)
tests/common/: mod.rs  pattern_chain_test_utils.rs
tests/compatibility/: aggregations.rs  filters.rs  joins.rs  partitions.rs  patterns.rs  tables.rs  triggers.rs  windows.rs
tests/custom_dyn_ext/: Cargo.toml
website/: docusaurus.config.js
website/docs/: intro.md
(+150 files in other folders)
