[package]
name = "eventflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eventflux-io/eventflux"
homepage = "https://eventflux.io"
documentation = "https://eventflux.io/docs"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
crossbeam-channel = "0.5"
crossbeam = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.11"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rayon = "1"
num_cpus = "1"
once_cell = "1"
# Using EventFlux fork with streaming SQL extensions
sqlparser = { path = "vendor/datafusion-sqlparser-rs" }
rusqlite = { version = "0.29", features = ["bundled"] }
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
lz4 = "1.24"
snap = "1.1"
zstd = "0.13"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
deadpool-redis = "0.15"
lapin = "2.3"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
dashmap = "6.0"
urlencoding = "2.1"

# Configuration management dependencies
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
etcd-rs = { version = "1.0", optional = true }
consul = { version = "0.4", optional = true }
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }
vault = { version = "10.1", optional = true }
base64 = { version = "0.22", optional = true }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3"
custom_dyn_ext = { path = "tests/custom_dyn_ext" }
serial_test = "3.0"
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lock_contention_bench"
harness = false

[features]
default = []
perf-tests = []
kubernetes = ["kube", "k8s-openapi", "base64"]
consul = ["dep:consul"]
etcd = ["etcd-rs"]
vault = ["dep:vault"]
cloud-native = ["kubernetes", "consul", "etcd", "vault"]

